@@ -1,5 +1,7 @@
 4.0.2 (released xx.xx.xxxx)
   * Updated dev dependencies
+  * Allow stdin when interactive mode is requested.
+    Closes: GH bug #184
 
 4.0.1 (released 02.05.2025)
   * Updated dev dependencies; support reproducible builds with setuptools_reproducible.
